# eda-project-tipe-tree

./: .gitignore  CMakeLists.txt  KnnResults_tiempos.txt  LICENSE  README.md  dataset_lfw_people.txt  functions_f.cpp  test.py  visualizador.py
.streamlit/: config.toml
front/: compare_point_cloud_results.txt  compare_point_cloud_results.txtaux  compare_results.txt  compare_results.txtaux  dataset_3d_results.txt  dataset_3d_results.txtaux  knn_results9.txt  main.py  onlyTest.py  requirements.txt
owl/: CMakeLists.txt
owl/owl/cmake/: FindOptiX.cmake
src/: CMakeLists.txt
src/ArkadeKNN/: ArkadeModel.cpp  ArkadeModel.h  BaseModel.cpp  BaseModel.h  CMakeLists.txt  CreateBVH.cpp  CreateBVH.h  DeviceCode.cu  DeviceCode.h  FastRNN.cpp  FastRNN.h  KnnResults.txt  MainCode.cpp  TransMonotoma.cpp  TransMonotoma.h  VarGlobal.cpp  VarGlobal.h  methods.h
src/ArkadeKNN/pyArkadeKNN/: CMakeLists.txt  bindings.cpp
src/s01-knn/: CMakeLists.txt  KnnResults.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
src/s02-withTrueknn/: CMakeLists.txt  TrueKnnResults.txt  deviceCode.cu  deviceCode.h  hostCode.cpp  initial_estimate.py
